<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatchLayout">

    <RelativeLayout
        style="@style/MatchMatchLayout"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/layUploadPhoto"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/no_image"
                app:civ_border_width="3dp"
                app:civ_border_color="#bdbdbd"
                app:civ_shadow="true"
                app:civ_shadow_radius="10" />

            <ImageButton
                android:id="@+id/imgBtnChangePhoto"
                style="@style/btn_round_style"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignBottom="@+id/imgProfile"
                android:layout_alignRight="@+id/imgProfile"
                android:layout_alignEnd="@+id/imgProfile" />

        </RelativeLayout>

        <LinearLayout
            style="@style/MatchWrapLayout"
            android:layout_below="@+id/layUploadPhoto"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputName"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputNoPonsel"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtNoPonsel"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/AppTheme.Settings.Title"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/rgGender"
                style="@style/MatchWrapLayout"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbGenderMale"
                    style="@style/MatchWrapLayout"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rbGenderFemale"
                    style="@style/MatchWrapLayout"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                style="@style/AppTheme.Settings.Title"
                android:text="@string/birthdate" />

            <TextView
                android:id="@+id/txtBirthDate"
                style="@style/MatchWrapLayout"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_event"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="01 Januari 2017"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputJob"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtJob"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/job" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputHobby"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtHobby"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/hobby" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnProfileSave"
                style="@style/button_signup_style"
                android:layout_gravity="center"
                android:text="Save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>