<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchWrapLayout">

    <RelativeLayout
        style="@style/MatchWrapLayout"
        android:layout_margin="7dp">

        <!--<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/material_amber" />
-->
        <LinearLayout
            style="@style/MatchWrapLayout"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/TextLabel"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputToken"
                style="@style/TextLabel">

                <EditText
                    android:id="@+id/edtToken"
                    style="@style/AppTheme.EditTextMaterial"
                    android:hint="Token"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/button_signup_style"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="Submit"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
