<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatchLayout">

    <LinearLayout
        style="@style/MatchMatchLayout"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardAddress"
            style="@style/MatchWrapLayout"
            android:layout_marginTop="5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/material_orange" />

            <LinearLayout
                style="@style/MatchWrapLayout"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtAddressAs"
                        style="@style/AppTheme.EditTextMaterial"
                        android:hint="Address as" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtRecipientName"
                        style="@style/AppTheme.EditTextMaterial"
                        android:hint="Recipient Name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtPhone"
                        style="@style/AppTheme.EditTextMaterial"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    style="@style/AppTheme.Settings.Title"
                    android:paddingLeft="5dp"
                    android:text="@string/province" />

                <Spinner
                    android:id="@+id/spinProvince"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/province"
                    android:spinnerMode="dialog" />

                <LinearLayout
                    android:id="@+id/layCity"
                    style="@style/MatchWrapLayout"
                    android:orientation="vertical">

                    <TextView
                        style="@style/AppTheme.Settings.Title"
                        android:paddingLeft="5dp"
                        android:text="City" />

                    <Spinner
                        android:id="@+id/spinCity"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/city"
                        android:spinnerMode="dialog" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/laySubdistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/AppTheme.Settings.Title"
                        android:paddingLeft="5dp"
                        android:text="@string/district" />

                    <Spinner
                        android:id="@+id/spinSubdistrict"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/district"
                        android:spinnerMode="dialog" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout style="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtAddress"
                        style="@style/AppTheme.EditTextMaterial"
                        android:hint="Detail Address" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
